# c-sql

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/: ConditionFunctor.hpp  FileIO.h  U8String.h  base.h  helpers.h  public.h  terminal.h
include/utils/: alterHelper.h  createHelper.h  deleteHelper.h  dropHelper.h  fileHelper.h  insertHelper.h  renameHelper.h  selectHelper.h  sqlCreate.h  updateHelper.h
src/: FileIO.cpp  U8String.cpp  alterHelper.cpp  createHelper.cpp  deleteHelper.cpp  dropHelper.cpp  insertHelper.cpp  main.cpp  renameHelper.cpp  selectHelper.cpp  terminal.cpp  updateHelper.cpp  utest.cpp
